--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <ul>
       <li>
-        <a href="/delivra.html">Delivra</a>
+        <a href="/test/delivra.html">Delivra</a>
       </li>
       <li>
-        <a href="/picture.html">Picture</a>
+        <a href="/test/picture.html">Picture</a>
       </li>
     </ul>
   </body>
