--- a/delivra.html
+++ b/delivra.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Test</h1>
-    <script
-      language="javascript"
-      type="text/javascript"
-      src="https://editor.ne16.com/Subscribe/Subscribe.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://www.google.com/recaptcha/api.js?render=explicit"
-      async
-      defer
-    ></script>
+    <script language="javascript" type="text/javascript" src="https://editor.ne16.com/Subscribe/Subscribe.js"></script>
+    <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
     <div class="dlvraPublished">
       <input type="hidden" id="DlvListID" value="1000014" />
-      <input
-        type="hidden"
-        id="DlvWebFormID"
-        value="6b4f9ac3-3fe3-4530-84ff-c3869d85090a"
-      />
-      <input
-        type="hidden"
-        id="DlvPublishEndpoint"
-        value="https://editor.ne16.com/Subscribe/PublishedForm.ashx"
-      />
+      <input type="hidden" id="DlvWebFormID" value="953f6ee1-32a2-4d25-9344-cf9fc3b4ddc0" />
+      <input type="hidden" id="DlvPublishEndpoint" value="https://editor.ne16.com/Subscribe/PublishedForm.ashx" />
     </div>
   </body>
 </html>
