--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Test</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="/test/delivra.html">Delivra</a>
-      </li>
-      <li>
-        <a href="/test/picture.html">Picture</a>
-      </li>
-    </ul>
+    <div class="icon">Hello</div>
+    <div class="icon">World</div>
+    <div class="icon">Hello</div>
   </body>
 </html>
