--- a/mjml/email.html
+++ b/mjml/email.html
@@ -7,30 +7,25 @@
 <!--<![endif]-->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<style type="text/css">#outlook a{
-  padding:0
+<style type="text/css">#outlook a{  padding:0
 }
-body{
-  margin:0;
+body{  margin:0;
   padding:0;
   -webkit-text-size-adjust:100%;
   -ms-text-size-adjust:100%
 }
-table,td{
-  border-collapse:collapse;
+table,td{  border-collapse:collapse;
   mso-table-lspace:0;
   mso-table-rspace:0
 }
-img{
-  border:0;
+img{  border:0;
   height:auto;
   line-height:100%;
   outline:0;
   text-decoration:none;
   -ms-interpolation-mode:bicubic
 }
-p{
-  display:block;
+p{  display:block;
   margin:13px 0
 }</style>
 <!--[if mso]>
@@ -53,61 +48,51 @@ p{
 <style type="text/css">@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);</style>
 <!--<![endif]-->
 <style type="text/css">@media only screen and (min-width:480px){
-  .mj-column-per-100{
-    width:100%!important;
+  .mj-column-per-100{    width:100%!important;
     max-width:100%
   }
 }</style>
-<style media="screen and (min-width:480px)">.moz-text-html .mj-column-per-100{
-  width:100%!important;
+<style media="screen and (min-width:480px)">.moz-text-html .mj-column-per-100{  width:100%!important;
   max-width:100%
 }</style>
 </head>
-<body style="
-  word-spacing:normal
+<body style="  word-spacing:normal
 ">
 <div style="" lang="und" dir="auto">
 <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-<div style="
-  background:#fff;
+<div style="  background:#fff;
   background-color:#fff;
   margin:0 auto;
   max-width:600px
 ">
-<table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="
-  background:#fff;
+<table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="  background:#fff;
   background-color:#fff;
   width:100%
 ">
 <tbody>
 <tr>
-<td style="
-  direction:ltr;
+<td style="  direction:ltr;
   font-size:0;
   padding:20px 0;
   text-align:center
 ">
 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:600px;" ><![endif]-->
-<div class="mj-column-per-100 mj-outlook-group-fix" style="
-  font-size:0;
+<div class="mj-column-per-100 mj-outlook-group-fix" style="  font-size:0;
   text-align:left;
   direction:ltr;
   display:inline-block;
   vertical-align:top;
   width:100%
 ">
-<table border="0" cellpadding="0" cellspacing="0" role="presentation" style="
-  vertical-align:top
+<table border="0" cellpadding="0" cellspacing="0" role="presentation" style="  vertical-align:top
 " width="100%">
 <tbody>
 <tr>
-<td align="left" style="
-  font-size:0;
+<td align="left" style="  font-size:0;
   padding:10px 25px;
   word-break:break-word
 ">
-<div style="
-  font-family:Ubuntu,Helvetica,Arial,sans-serif;
+<div style="  font-family:Ubuntu,Helvetica,Arial,sans-serif;
   font-size:13px;
   line-height:1;
   text-align:left;
