--- a/mjml/email.html
+++ b/mjml/email.html
@@ -32,7 +32,8 @@ p{  display:block;margin:13px 0}</style>
 <style type="text/css">@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);</style>
 <!--<![endif]-->
 <style type="text/css">@media only screen and (min-width:480px){
-  .mj-column-per-100{    width:100%!important;max-width:100%  }}</style>
+  .mj-column-per-100{    width:100%!important;max-width:100%  }
+}</style>
 <style media="screen and (min-width:480px)">.moz-text-html .mj-column-per-100{  width:100%!important;max-width:100%}</style>
 </head>
 <body style="  word-spacing:normal">
